[gd_scene load_steps=32 format=3 uid="uid://bosvpkft6qd33"]

[ext_resource type="Texture2D" uid="uid://d377o5ql0a6pw" path="res://assets/enemies/ours.png" id="1_4a83h"]
[ext_resource type="Script" uid="uid://b7y47wuj2n4a2" path="res://scenes/enemy/bear.gd" id="1_a3pup"]
[ext_resource type="Texture2D" uid="uid://cmoo0uiobbaus" path="res://assets/enemies/ours_player.png" id="3_40wdo"]
[ext_resource type="Texture2D" uid="uid://cdxs35au53ja8" path="res://assets/enemies/bury_attack_flip.png" id="3_tjssy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a3pup"]
atlas = ExtResource("1_4a83h")
region = Rect2(0, 2000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_40wdo"]
atlas = ExtResource("1_4a83h")
region = Rect2(1000, 2000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjssy"]
atlas = ExtResource("1_4a83h")
region = Rect2(2000, 2000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl05p"]
atlas = ExtResource("1_4a83h")
region = Rect2(3000, 2000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwlon"]
atlas = ExtResource("1_4a83h")
region = Rect2(0, 3000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbhyu"]
atlas = ExtResource("1_4a83h")
region = Rect2(1000, 3000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_13gj6"]
atlas = ExtResource("1_4a83h")
region = Rect2(2000, 3000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvxgb"]
atlas = ExtResource("1_4a83h")
region = Rect2(1000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_peoo5"]
atlas = ExtResource("1_4a83h")
region = Rect2(2000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_2f3il"]
atlas = ExtResource("1_4a83h")
region = Rect2(3000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsmli"]
atlas = ExtResource("3_tjssy")
region = Rect2(2000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_cicna"]
atlas = ExtResource("3_tjssy")
region = Rect2(1000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_sff7j"]
atlas = ExtResource("3_tjssy")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_wk82e"]
atlas = ExtResource("1_4a83h")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtxhd"]
atlas = ExtResource("1_4a83h")
region = Rect2(0, 1000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_so3kp"]
atlas = ExtResource("1_4a83h")
region = Rect2(1000, 1000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_5woo5"]
atlas = ExtResource("1_4a83h")
region = Rect2(2000, 1000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_pb0yv"]
atlas = ExtResource("1_4a83h")
region = Rect2(3000, 1000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_4efjx"]
atlas = ExtResource("1_4a83h")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_prup0"]
atlas = ExtResource("3_40wdo")
region = Rect2(1000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxjon"]
atlas = ExtResource("3_40wdo")
region = Rect2(2000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5q6l"]
atlas = ExtResource("3_40wdo")
region = Rect2(3000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ed2q"]
atlas = ExtResource("3_40wdo")
region = Rect2(4000, 0, 1000, 1000)

[sub_resource type="SpriteFrames" id="SpriteFrames_prup0"]
animations = [{
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_a3pup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40wdo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjssy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl05p")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_cwlon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbhyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13gj6")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvxgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_peoo5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2f3il")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsmli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cicna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sff7j")
}],
"loop": false,
"name": &"burry_attack",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wk82e")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtxhd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_so3kp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5woo5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pb0yv")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4efjx")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_prup0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxjon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5q6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ed2q")
}],
"loop": false,
"name": &"see_player",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_40wdo"]
radius = 1500.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tjssy"]
radius = 2500.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tjssy"]
size = Vector2(97.6382, 87.7565)

[node name="bear" type="Area2D"]
script = ExtResource("1_a3pup")
health = 4
food_drop = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_prup0")
animation = &"burry_attack"

[node name="hurtbox_bite" type="Area2D" parent="." groups=["damage"]]
visible = false

[node name="left" type="CollisionPolygon2D" parent="hurtbox_bite"]
position = Vector2(86, -47)
rotation = 1.04413
polygon = PackedVector2Array(-202.2, 150.798, -262.696, 179.244, -238.894, 213.906, -190.563, 236.224, -178.399, 235.199, -133.084, 262.705, -64.7679, 266.567, 2.40393, 224.651, 37.0068, 159.171, 34.4564, 85.9695, -2.31374, 43.7681, -62.7477, 14.4127, -44.6736, 19.1381, -52.1705, -39.5884, -68.717, -33.0148, -106.934, -80.6848, -170.046, -17.8998, -180.742, 2.48604, -167.736, 37.8107, -146.265, 52.6087, -187.441, 101.542)

[node name="right" type="CollisionPolygon2D" parent="hurtbox_bite"]
position = Vector2(-86, -47)
rotation = 1.04413
polygon = PackedVector2Array(23.0495, -244.554, 7.65106, -291.68, 22.408, -291.197, 25.5256, -326.401, 48.2839, -317.795, 52.7276, -331.406, 90.6849, -315.119, 123.997, -274.929, 167.161, -241.734, 197.819, -194.989, 201.175, -162.962, 197.011, -104.075, 160.961, -44.0636, 109.894, -15.9188, 44.171, -18.2736, 0.363754, -48.3722, -68.054, -22.2184, -68.2144, -33.8792, -131.363, -48.6185, -125.351, -72.8848, -138.318, -80.4246, -112.824, -122.282, -117.005, -127.027, -78.1209, -168.039, -28.804, -161.342)

[node name="hitbox_bite" type="Area2D" parent="."]
visible = false

[node name="right" type="CollisionPolygon2D" parent="hitbox_bite"]
position = Vector2(120, -62)
polygon = PackedVector2Array(-85, -87, -87, -126, -156, -155, -154, -141, -206, -146, -233, -125, -230, -52, -170, -10, -173, 26, -252, 79, -288, 115, -230, 105, -143, 111, -95, 134, -8, 131, 46, 105, 82, 58, 108, -7, 95, -22, 118, -70, 96, -134, 51, -122, 17, -97, -26, -104)

[node name="left" type="CollisionPolygon2D" parent="hitbox_bite"]
position = Vector2(120, -62)
polygon = PackedVector2Array(-332, -128, -356, -66, -304, 108, -191, 136, -115, 122, 2, 106, -13, 69, -67, 31, -70, -10, -1, -63, -25, -160, -142, -155, -159, -92, -254, -95, -295, -131)

[node name="detect_zone" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_40wdo")

[node name="patrol zone" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="patrol zone"]
visible = false
shape = SubResource("CircleShape2D_tjssy")

[node name="attackCooldown" type="Timer" parent="."]
one_shot = true

[node name="hitbox_bury" type="Area2D" parent="."]

[node name="left" type="CollisionPolygon2D" parent="hitbox_bury"]
polygon = PackedVector2Array(-8, -151, -110, -121, -100, 26, 37, 50, 126, 38, 158, -47)

[node name="right" type="CollisionPolygon2D" parent="hitbox_bury"]
polygon = PackedVector2Array(3, -151, -163, -56, -119, 42, 76, 33, 120, -111)

[node name="bear_collider" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="bear_collider"]
position = Vector2(-6, -50)
rotation = -3.14159
scale = Vector2(3.14518, 2.66777)
shape = SubResource("RectangleShape2D_tjssy")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="area_entered" from="hitbox_bite" to="." method="_on_hitbox_bite_area_entered"]
[connection signal="body_exited" from="patrol zone" to="." method="_on_patrol_zone_body_exited"]
[connection signal="timeout" from="attackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="area_entered" from="hitbox_bury" to="." method="_on_hitbox_bury_area_entered"]
